# code-challenge-be

./: .gitignore  README.md  pyproject.toml
src/: app.py  auth.py  session.py
src/core/: base_model.py  base_repo.py  base_schema.py
src/models/: event_feed_model.py
src/repos/: event_feeds_repo.py
src/routers/: event_feeds_route.py
src/schemas/: event_feed_schema.py
tests/: conftest.py  test_event_feeds.py
